# prediction-market-edge

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: run-pipeline.yml  weekly-summary-email.yml
contracts/: README.md
contracts/json/: market_snapshot.schema.json  model_forecast.schema.json  paper_order.schema.json  paper_position.schema.json  run_manifest.schema.json  signal_record.schema.json
data/reports/: run_report_136a9a38-f381-43e2-8166-e73ce13a516e.html  run_report_136a9a38-f381-43e2-8166-e73ce13a516e.md  run_report_27b31c0f-e112-4e25-b562-768e98ff0713.md  run_report_568d27bb-6c54-4d75-b7bb-ad8d0d002474.html  run_report_568d27bb-6c54-4d75-b7bb-ad8d0d002474.md  run_report_928b075e-f9dc-406f-b62c-83664d34e212.md  run_report_b57c3ba5-db05-49aa-9cb4-c9fc06b3e497.html  run_report_b57c3ba5-db05-49aa-9cb4-c9fc06b3e497.md  run_report_ba4adaa6-c13e-44a2-9c38-8e1e82f44b57.md  (+4 more)
docs/: CONTRIBUTING.md  OPERATIONS.md  POSITION_LIFECYCLE_PLAN.md  PREFLIGHT_CHECKLIST.md  PYTHON_VS_JAVA.md
prediction_market_edge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: export_contract_schemas.py
services-java/: README.md
src/cli/: main.py
tests/: test_config.py  test_connectors.py  test_contracts.py  test_econ_indicators_fixture_pipeline.py  test_econ_model.py  test_http_client.py  test_paper_trading.py  test_parquet_archive.py  test_pipeline_smoke.py  test_report_prune.py  test_reporting_narrative.py  test_state_check.py  test_storage.py  test_storage_integrity.py  test_unemployment_model.py  test_workflows_yaml.py
(+41 files in other folders)
